@@ -1,3 +1,8 @@
+2009-07-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
+	focus desynchronization doesn't cause a crash.
+
 2009-04-30  Don Porter  <dgp@users.sourceforge.net>
 
 	* win/tkWinPixmap.c (Tk_GetPixmap): [Bug 2080533]: Added patch that
